--- a/firebase.json
+++ b/firebase.json
@@ -1,8 +1,6 @@
-{
-  "functions": [
     {
-      "source": "functions",
-      "codebase": "default",
+      "source": "poupaai",
+      "codebase": "poupaai",
       "ignore": [
         "node_modules",
         ".git",
@@ -13,5 +11,4 @@
         "npm --prefix \"%RESOURCE_DIR%\" run lint"
       ]
     }
-  ]
-}
+
