--- a/poupaai/package.json
+++ b/poupaai/package.json
@@ -15,8 +15,7 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1",
-    "graphql-request": "^6.1.0"
+    "firebase-functions": "^4.3.1"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
