--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get_it: ^7.6.4
   firebase_auth: ^4.13.0
   flutter_secure_storage: ^9.0.0
+  cloud_functions: ^4.5.4
 
 dev_dependencies:
   flutter_test:
