--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.13.0
   flutter_secure_storage: ^9.0.0
   cloud_functions: ^4.5.4
+  graphql_flutter: ^5.1.2
 
 dev_dependencies:
   flutter_test:
